[gd_scene load_steps=9 format=3 uid="uid://b0w820dulgunt"]

[ext_resource type="Script" uid="uid://qbgpoqjrvtdi" path="res://instances/pnl_rs_twitch_user_info.gd" id="1_n4h8q"]
[ext_resource type="Texture2D" uid="uid://bwsg8be7ife7b" path="res://ui/sprites/twitch_user_profile_pic.png" id="2_6jmpg"]
[ext_resource type="StyleBox" uid="uid://cly0o4e4fqaop" path="res://ui/editor_light_panel_transp.stylebox" id="3_gbh7e"]
[ext_resource type="Texture2D" uid="uid://c2bfapbqs6yn8" path="res://ui/bootstrap_icons/floppy-fill.png" id="4_dbbbh"]
[ext_resource type="PackedScene" uid="uid://d0cdydbgdy7ob" path="res://lib/games_info/pnl_steam_app_info.tscn" id="4_gbh7e"]
[ext_resource type="Texture2D" uid="uid://dyvulwkiqobgx" path="res://ui/bootstrap_icons/arrow-through-heart-fill.png" id="5_gbh7e"]
[ext_resource type="Texture2D" uid="uid://bl85mbqfcw114" path="res://ui/bootstrap_icons/filetype-json.png" id="6_sgmoj"]
[ext_resource type="Texture2D" uid="uid://j610yfm3clvy" path="res://ui/bootstrap_icons/heartbreak-fill.png" id="7_dbbbh"]

[node name="pnl_rs_twitch_user_info" type="PanelContainer"]
offset_right = 1454.0
offset_bottom = 994.0
script = ExtResource("1_n4h8q")
metadata/_tab_index = 0

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="twitch_info" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="tex_profile_pic" type="TextureRect" parent="vb/twitch_info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("2_6jmpg")
expand_mode = 2
stretch_mode = 5

[node name="vb" type="VBoxContainer" parent="vb/twitch_info"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ln_username" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "username"
editable = false

[node name="ln_display_name" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "display name"
editable = false

[node name="ln_user_id" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "user id"
editable = false

[node name="ln_profile_picture_url" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "profile picture url"
editable = false

[node name="hb" type="HBoxContainer" parent="vb/twitch_info/vb"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/twitch_info/vb/hb"]
layout_mode = 2
text = "Twich chat colour"

[node name="cr_user_twitch_irc_color" type="ColorRect" parent="vb/twitch_info/vb/hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="grid_custom" type="GridContainer" parent="vb/twitch_info"]
layout_mode = 2
columns = 2

[node name="lb4" type="Label" parent="vb/twitch_info/grid_custom"]
layout_mode = 2
text = "Godot chat colour"

[node name="btn_custom_color" type="ColorPickerButton" parent="vb/twitch_info/grid_custom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="lb5" type="Label" parent="vb/twitch_info/grid_custom"]
layout_mode = 2
text = "Custom sfx"

[node name="opt_custom_sfx" type="OptionButton" parent="vb/twitch_info/grid_custom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="lb7" type="Label" parent="vb/twitch_info/grid_custom"]
layout_mode = 2
text = "Custom actions"

[node name="opt_custom_actions" type="OptionButton" parent="vb/twitch_info/grid_custom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="pnl" type="PanelContainer" parent="vb"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_gbh7e")

[node name="hb" type="HBoxContainer" parent="vb/pnl"]
layout_mode = 2
size_flags_vertical = 3

[node name="vb_promo" type="VBoxContainer" parent="vb/pnl/hb"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="flags" type="HBoxContainer" parent="vb/pnl/hb/vb_promo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fl_is_streamer" type="CheckButton" parent="vb/pnl/hb/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Streamer"
alignment = 2

[node name="fl_auto_shoutout" type="CheckButton" parent="vb/pnl/hb/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-shoutout"
alignment = 2

[node name="fl_auto_promotion" type="CheckButton" parent="vb/pnl/hb/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-promotion"
alignment = 2

[node name="hb1" type="HBoxContainer" parent="vb/pnl/hb/vb_promo"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/pnl/hb/vb_promo/hb1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Works with"

[node name="opt_work_with" type="OptionButton" parent="vb/pnl/hb/vb_promo/hb1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="hb2" type="HBoxContainer" parent="vb/pnl/hb/vb_promo"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/pnl/hb/vb_promo/hb2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Youtube"

[node name="ln_youtube_handle" type="LineEdit" parent="vb/pnl/hb/vb_promo/hb2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "@handle"

[node name="hb3" type="HBoxContainer" parent="vb/pnl/hb/vb_promo"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/pnl/hb/vb_promo/hb3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Website"

[node name="ln_website" type="LineEdit" parent="vb/pnl/hb/vb_promo/hb3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "https://"

[node name="te_so" type="TextEdit" parent="vb/pnl/hb/vb_promo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "shoutout message"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="te_promote" type="TextEdit" parent="vb/pnl/hb/vb_promo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "promotion message"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="vb_games" type="VBoxContainer" parent="vb/pnl/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="vb/pnl/hb/vb_games"]
layout_mode = 2
text = "Games"
horizontal_alignment = 1

[node name="sep" type="HSeparator" parent="vb/pnl/hb/vb_games"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb/pnl/hb/vb_games"]
layout_mode = 2
size_flags_vertical = 3

[node name="vb_steam" type="VBoxContainer" parent="vb/pnl/hb/vb_games/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ln_add_steam_app_id" type="LineEdit" parent="vb/pnl/hb/vb_games/hb/vb_steam"]
layout_mode = 2
placeholder_text = "steam app id"

[node name="pnl" type="PanelContainer" parent="vb/pnl/hb/vb_games/hb/vb_steam"]
layout_mode = 2
size_flags_vertical = 3

[node name="scr" type="ScrollContainer" parent="vb/pnl/hb/vb_games/hb/vb_steam/pnl"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="vb_steam_app_list" type="VBoxContainer" parent="vb/pnl/hb/vb_games/hb/vb_steam/pnl/scr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="entry_steam_app" type="PanelContainer" parent="vb/pnl/hb/vb_games/hb/vb_steam/pnl/scr/vb_steam_app_list"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb/pnl/hb/vb_games/hb/vb_steam/pnl/scr/vb_steam_app_list/entry_steam_app"]
layout_mode = 2

[node name="lb_game_name" type="Label" parent="vb/pnl/hb/vb_games/hb/vb_steam/pnl/scr/vb_steam_app_list/entry_steam_app/hb"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name of The GAME very very long name so that we check it the ellipsis work"
text_overrun_behavior = 3

[node name="vb_itch" type="VBoxContainer" parent="vb/pnl/hb/vb_games/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ln_add_itch_io_link" type="LineEdit" parent="vb/pnl/hb/vb_games/hb/vb_itch"]
layout_mode = 2
placeholder_text = "itch.io link"

[node name="pnl" type="PanelContainer" parent="vb/pnl/hb/vb_games/hb/vb_itch"]
layout_mode = 2
size_flags_vertical = 3

[node name="scr" type="ScrollContainer" parent="vb/pnl/hb/vb_games/hb/vb_itch/pnl"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="vb_itch_app_list" type="VBoxContainer" parent="vb/pnl/hb/vb_games/hb/vb_itch/pnl/scr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pnl_steam_app_info" parent="vb/pnl/hb" instance=ExtResource("4_gbh7e")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="btn_save" type="Button" parent="vb/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"
icon = ExtResource("4_dbbbh")
expand_icon = true

[node name="btn_reload" type="Button" parent="vb/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reload from file"
icon = ExtResource("5_gbh7e")
expand_icon = true

[node name="btn_open_file" type="Button" parent="vb/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open user file"
icon = ExtResource("6_sgmoj")
expand_icon = true

[node name="btn_delete" type="Button" parent="vb/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete user"
icon = ExtResource("7_dbbbh")
expand_icon = true

[connection signal="pressed" from="vb/HBoxContainer/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="vb/HBoxContainer/btn_reload" to="." method="_on_btn_reload_pressed"]
[connection signal="pressed" from="vb/HBoxContainer/btn_open_file" to="." method="_on_btn_open_file_pressed"]
[connection signal="pressed" from="vb/HBoxContainer/btn_delete" to="." method="_on_btn_delete_pressed"]
